--- a/src/components/imageDescBtn/ImageDescBtn.module.scss
+++ b/src/components/imageDescBtn/ImageDescBtn.module.scss
@@ -42,12 +42,12 @@
     &__button {
       &:link,
       &:visited {
+        @include link-reset();
         @include flex-all-center();
         width: 100%;
         height: 100%;
         color: $white;
         font-size: 1.7rem;
-        text-decoration: none;
         background-color: $gray;
         transition: $basic;
       }
