--- a/src/components/linkGroup/LinkGroup.module.scss
+++ b/src/components/linkGroup/LinkGroup.module.scss
@@ -15,8 +15,7 @@
     &-link {
       &:link,
       &:visited {
-        color: inherit;
-        text-decoration: none;
+        @include link-reset();
         font-weight: 600;
         text-transform: uppercase;
         font-size: inherit;
@@ -34,8 +33,8 @@
       &-link {
         &:link,
         &:visited {
+          @include link-reset();
           color: $white;
-          text-decoration: none;
           font-size: 1.4rem;
           letter-spacing: 0.02rem;
         }
