--- a/src/components/plainButton/PlainButton.module.scss
+++ b/src/components/plainButton/PlainButton.module.scss
@@ -4,13 +4,13 @@
 .plain-button {
   &__button:link,
   &__button:visited {
+    @include link-reset();
     color: $white;
     font-size: 1.45rem;
     padding: 1.5rem;
     display: flex;
     align-items: center;
     letter-spacing: 0.1rem;
-    text-decoration: none;
     transition: all 0.2s;
     background-color: $primary;
     font-family: inherit;
