--- a/src/components/submitButton/SubmitButton.module.css
+++ b/src/components/submitButton/SubmitButton.module.css
@@ -1,5 +1,11 @@
 .submit-button button {
-  all: unset;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  background: none;
+  border: none;
+  line-height: 1;
   display: inline-block;
   font-family: inherit;
   color: #fff;
@@ -16,6 +22,8 @@
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   background-color: #af0061; }
+  .submit-button button:focus {
+    outline-color: green !important; }
 .submit-button button:disabled {
   opacity: 0.5;
   background-color: inherit; }
