--- a/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.scss
+++ b/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.scss
@@ -8,7 +8,13 @@
   top: 0;
   left: 0;
   transform: translateX(100%);
-  background-color: rgba($primary, 0.9);
+  letter-spacing: 0.03rem;
+
+  background-image: linear-gradient(
+    to right,
+    $primaryTrans,
+    $primaryLightTrans
+  );
   backdrop-filter: blur(1rem);
   padding: 1rem 3em 3rem;
   transition: $basic;
@@ -48,7 +54,7 @@
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
-    margin-bottom: 3.5rem;
+    margin-bottom: 5rem;
 
     &__heading,
     &__single-option,
@@ -61,7 +67,7 @@
         display: flex !important;
         align-items: center;
         justify-content: space-between;
-        letter-spacing: 0.18rem;
+        letter-spacing: inherit;
         text-transform: capitalize;
       }
     }
@@ -107,9 +113,13 @@
       height: 2rem;
     }
   }
+  &__text-image-buttons {
+    letter-spacing: inherit;
+  }
 
   &__main-slide {
     &__buttons {
+      margin-bottom: 5rem;
       button {
         @include button-reset();
         @include invertColorsButtons($white, $primary);
@@ -117,6 +127,7 @@
         padding: 1.5rem;
         font-size: 1.5rem;
         cursor: pointer;
+        letter-spacing: inherit;
         transition: $basic;
       }
     }
