--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,8 @@
 //color
 $primary: #af0061;
+$primaryLight: lighten($primary, 5%);
+$primaryTrans: rgba($primary, 0.9);
+$primaryLightTrans: rgba($primaryLight, 0.9);
 $secondary: #0099a8;
 $darkText: #222222;
 $white: #fff;
