create animations for scss, finish loginsignup component and functionality, refactor context and their reducer functions and also create custom hooks to use those contexts, refactor stylesheets, create success icon and success message and loading spinner component

--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -1,3 +1,27 @@
+@-webkit-keyframes rotate360 {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+@keyframes rotate360 {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 .hero-container {
   position: relative;
   max-width: 140rem;
@@ -17,7 +41,9 @@
     -webkit-transform: translateY(-15%);
             transform: translateY(-15%);
     left: 2.5rem;
-    color: #fff; }
+    color: #fff;
+    -webkit-animation: fadeIn 1s linear;
+            animation: fadeIn 1s linear; }
     .hero-container div[class*="textbox"] p[class*="short-introduction"] {
       text-transform: uppercase;
       font-weight: 600; }
