--- a/src/components/successIcon/SuccessIcon.module.scss
+++ b/src/components/successIcon/SuccessIcon.module.scss
@@ -1,9 +1,9 @@
 @import "../../scss/variables";
 @import "../../scss/mixin";
 
-.success-checkmark-container {
+.success-icon-container {
   width: 5rem;
-  padding: 0.75rem;
+  padding: 0.8rem;
   aspect-ratio: 16/16;
   border-radius: 50%;
   overflow: hidden;
