--- a/src/components/successIcon/SuccessIcon.module.css
+++ b/src/components/successIcon/SuccessIcon.module.css
@@ -1,6 +1,6 @@
-.success-checkmark-container {
+.success-icon-container {
   width: 5rem;
-  padding: 0.75rem;
+  padding: 0.8rem;
   aspect-ratio: 16/16;
   border-radius: 50%;
   overflow: hidden;
@@ -14,8 +14,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center; }
-  .success-checkmark-container img {
+  .success-icon-container img {
     display: block;
     width: 100%; }
 
-/*# sourceMappingURL=SuccessCheckMark.module.css.map */
+/*# sourceMappingURL=SuccessIcon.module.css.map */
